--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -383,12 +383,12 @@
     "def get_inputs():\n",
     "    \"\"\"\n",
     "    Create TF Placeholders for input, targets, and learning rate.\n",
-    "    :return: Tuple (input, targets, learning rate)\n",
+    "    :return: Tuple (input_, targets, learning rate)\n",
     "    \"\"\"\n",
-    "    input = tf.placeholder(tf.int32, [None, None], name='input')\n",
+    "    input_ = tf.placeholder(tf.int32, [None, None], name='input')\n",
     "    target = tf.placeholder(tf.int32, [None, None], name='target')\n",
     "    learn_rate = tf.placeholder(tf.float32, name='learn_rate')\n",
-    "    return input, target, learn_rate\n",
+    "    return input_, target, learn_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -677,18 +677,12 @@
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
-    "    batch_length = batch_size * seq_length * 2      # 2 for input & target\n",
+    "    # batch length is  batch_size * seq_length * 2      # 2 for input & target\n",
     "    len_text = len(int_text)\n",
     "    num_batches = len_text // (batch_size * seq_length)\n",
     "    \n",
-    "    # print('batch_size',batch_size)\n",
-    "    # print('seq_length',seq_length)\n",
-    "    # print('len_text',len_text)\n",
-    "    # print('batch_length',batch_length)\n",
-    "    # print('num_batches',num_batches)\n",
-    "    \n",
     "    bats = []\n",
-    "    for b in range(num_batches):\n",
+    "    for _ in range(num_batches):\n",
     "        inps = []\n",
     "        tars = []\n",
     "        for bs in range(batch_size):\n",
